--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
        
     </div>
     <div id="quiz" class="grid-item" onclick="location.href='novaversao.html'">
-        <img src="senha.png" alt="Imagem do Quiz"> 
+        <img src="senha.png" alt="Imagem ssdo Quiz"> 
     </div>
     
 
