--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         </ul>
     </div>
 
-    <div id="quiz" class="grid-item" onclick="location.href='quiz.html'">
+    <div id="quiz" class="grid-item" onclick="location.href='novaversao.html'">
         <img src="quiz3.png" alt="Imagem do Quiz"> 
        
     </div>
-    <div id="quiz" class="grid-item" onclick="location.href='novaversao.html'">
+    <div id="quiz" class="grid-item" onclick="location.href='gastos.html'">
         <img src="senha.png" alt="Imagem ssdo Quiz"> 
     </div>
     
