--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="menu">
       
         <ul>
-            <li><a href="#quiz">Quiz</a></li>
+            <li><a href="#quizz">Quiz</a></li>
             <li><a href="#outros">Outros Projetos</a></li>
             <li><a href="#recursos">Recursos</a></li>
             <!-- Adicione mais itens de menu aqui, se necessário -->
